Improve Code Coverage % for Legal-core